--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $paragraph-color: #fff;
 $brand-main-color: red;
 
 /* Font sizes */
-$paragraph-font-size; 16px;
+$paragraph-font-size: 16px;
 
 /* Font */
 $brand-font: "Open Sans", Helvetica, Arial;
