--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,35 @@
 @import "layout";
 
 
-
 body {
-    background: gray;
+    background: white;
+}
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+.logo {
+    display: inline-block;
+    font-size: 22px;
+    margin-top: 10px;
+    margin-left: 20px;
+    text-decoration: none;
+}
+
+.main-nav {
+    list-style-type: none;
+    display: none;
+}
+
+.nav-links {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7);
+    text-align: center;
+    margin: 15px auto;
+}
+
+.active {
+    display: block;
 }
