fixed browsersync autoreloading, package.json updated

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,13 +5,19 @@
 
 
 body {
-    background: white;
+    background: gray;
 }
 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    border: 4px solid;
+}
+
+.navbar {
+    width: 200px;
+    height: 100%;
 }
 .logo {
     display: inline-block;
@@ -23,14 +29,21 @@ body {
 
 .main-nav {
     list-style-type: none;
-    display: none;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .nav-links {
-    text-decoration: none;
+    width: 100%;
+    margin: 0;
     color: rgba(255, 255, 255, 0.7);
     text-align: center;
-    margin: 15px auto;
+    a {
+        display: block;
+        text-decoration: none;
+    }
 }
 
 .active {
