--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,52 @@
 /* Colors */
 /* Font sizes */
 /* Font */
-body { background: gray; }
+body {
+  background: gray;
+}
 
-* { box-sizing: border-box; padding: 0; margin: 0; }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  border: 4px solid;
+}
 
-.logo { display: inline-block; font-size: 22px; margin-top: 10px; margin-left: 20px; text-decoration: none; }
+.navbar {
+  width: 200px;
+  height: 100%;
+}
 
-.main-nav { list-style-type: none; display: none; }
+.logo {
+  display: inline-block;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-left: 20px;
+  text-decoration: none;
+}
 
-.nav-links { text-decoration: none; color: rgba(255, 255, 255, 0.7); text-align: center; margin: 15px auto; }
+.main-nav {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 
-.active { display: block; }
+.nav-links {
+  width: 100%;
+  margin: 0;
+  color: rgba(255, 255, 255, 0.7);
+  text-align: center;
+}
+
+.nav-links a {
+  display: block;
+  text-decoration: none;
+}
+
+.active {
+  display: block;
+}
+
+/*# sourceMappingURL=style.css.map */
