added icons to images folder and done some work on nav bar

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,5 @@
 /* Colors */
-$paragraph-color: #fff;
+$paragraph-color: #605f5f;
 $brand-main-color: red;
 
 /* Font sizes */
@@ -7,5 +7,6 @@ $paragraph-font-size: 16px;
 
 /* Font */
 $brand-font: "Open Sans", Helvetica, Arial;
-$paragraph-font: "Open Sans", Helvetica, Arial;
+$paragraph-font: 'Roboto Condensed', sans-serif;
+$logo-font: 'Gloria Hallelujah', cursive;
 
