--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import "normalize";
 @import "layout";
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto+Condensed&display=swap');
+@import "fonts/*";
 
 
 body {
