--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,84 +2,149 @@
 @import "mixins";
 @import "normalize";
 @import "layout";
-@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto+Condensed&display=swap');
-@import "fonts/*";
-
+@import "Glyphter";
+@import url("https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Roboto+Condensed|Rubik&display=swap");
 
 body {
-    background: gray;
+  background: gray;
+  display: flex;
+  border: 4px solid black;
 }
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-.container {
-    max-width: 1200px;
-    width: 100%;
-    height: 100vh;
-    border: 4px solid red;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .navbar {
-    width: 200px;
-    height: 100%;
-    background: #191919;
-    }
+  width: 250px;
+  background: #191919;
+}
 
 .logo-box {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
 }
 .fa-bars {
-    color: #605f5f;
-    font-size: 20px;
+  color: #605f5f;
+  font-size: 20px;
 }
 
 .logo {
-    font-size: 26px;
-    text-decoration: none;
-    color: #dbd9d9;
-    font-family: $logo-font;
+  font-size: 26px;
+  text-decoration: none;
+  color: #dbd9d9;
+  font-family: $logo-font;
 }
 
 .main-nav {
-    list-style-type: none;
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .nav-links {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  a {
     display: flex;
-    a {
-        font-family: $paragraph-font;
-        padding: 10px;
-        flex: 1;
-        text-decoration: none;
-        color: $paragraph-color;
-        &:hover, &:focus {
-            background: linear-gradient(90deg, orange, orange 2.9%, #282828 3%, #282828 100%);
-            transition: .5s;
-            color: #cecece;
-        }
+    justify-content: flex-start;
+    align-items: center;
+    flex: 1;
+    font-family: $paragraph-font;
+    padding: 10px;
+    text-decoration: none;
+    color: $paragraph-color;
+    &:hover {
+      background: linear-gradient(90deg, orange, orange 2%, #282828 2.1%, #282828 100%);
+      color: #cecece;
     }
-   
-
+    span {
+      margin: 3px 15px 0 5px;
+    }
+  }
+  &:hover span {
+    color: #cecece;
+  }
 }
 
-.nav-underLine{
-    margin-top: 40px;
-    border-bottom: 1px solid $paragraph-color;
+.icon {
+  color: $paragraph-color;
+}
+
+.nav-underLine {
+  margin-top: 40px;
+  border-bottom: 1px solid $paragraph-color;
 }
 
 .active {
-    display: block;
+  display: block;
+}
+
+.nav-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.topbar {
+  background: white;
+  height: 60px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.container {
+  max-width: 1200px;
+  border: 4px solid blue;
+  width: 100%;
+  height: 100vh;
+}
+
+.topbar-element {
+  border: 3px solid red;
+  display: flex;
+  align-items: center;
+}
+
+.general {
+  background: white;
+  margin: 10px;
+  border: 3px solid green;
+  display: flex;
+  flex-direction: column;
+}
+
+.general-date {
+  display: flex;
+  justify-content: center;
+}
+
+.date-columns {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  padding: 10px;
+  border: 2px solid gray;
+  border-radius: 4px;
+  input {
+    border: none;
+  }
+}
+
+.date-splitLine {
+  border: 1px solid gray;
+  height: 100%;
+  margin: 0 15px;
+}
+
+.date-button {
+  display: flex;
+  align-items: center;
 }
