--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,5 +8,5 @@ $paragraph-font-size: 16px;
 /* Font */
 $brand-font: "Open Sans", Helvetica, Arial;
 $paragraph-font: 'Roboto Condensed', sans-serif;
-$logo-font: 'Rubik', sans-serif;
+$logo-font: 'Indie Flower', cursive;
 
