--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,12 +3,11 @@
 @import "normalize";
 @import "layout";
 @import "Glyphter";
-@import url("https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Roboto+Condensed|Rubik&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Roboto+Condensed&display=swap');
 
 body {
   background: gray;
   display: flex;
-  border: 4px solid black;
 }
 
 * {
@@ -27,6 +26,7 @@ body {
   width: 100%;
   justify-content: space-around;
   align-items: center;
+  padding: 10px 0;
 }
 .fa-bars {
   color: #605f5f;
@@ -38,6 +38,7 @@ body {
   text-decoration: none;
   color: #dbd9d9;
   font-family: $logo-font;
+  font-weight: 800;
 }
 
 .main-nav {
@@ -102,7 +103,6 @@ body {
 
 .container {
   max-width: 1200px;
-  border: 4px solid blue;
   width: 100%;
   height: 100vh;
 }
@@ -116,7 +116,6 @@ body {
 .general {
   background: white;
   margin: 10px;
-  border: 3px solid green;
   display: flex;
   flex-direction: column;
 }
@@ -147,4 +146,41 @@ body {
 .date-button {
   display: flex;
   align-items: center;
+}
+
+.nav-manager {
+  font-family: $paragraph-font;
+  color: $paragraph-color;
+  text-align: left;
+  margin: 15px 0 0 15px;
+}
+
+.nav-chat {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.chat-avatar {
+  background-image: url("/images/90.jpg");
+  height: 45px;
+  width: 45px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+}
+
+.avatar-dot {
+  background: green;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin-left: 34px;
+}
+
+.chat-nick{
+  font-family: $paragraph-font;
+  color: #56819f;
+  margin-right: 30px;
 }
