started to work on top bar

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,7 @@
 /* Colors */
 $paragraph-color: #605f5f;
 $brand-main-color: red;
+$secondary-color: #ADADAD;
 
 /* Font sizes */
 $paragraph-font-size: 16px;
