--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@
 }
 
 body {
-  background: gray;
+  background: #F5F5F2;
   display: flex;
 }
 
@@ -144,6 +144,13 @@ body {
   margin: 0;
 }
 
+.container {
+  max-width: 1200px;
+  width: 100%;
+  height: 100vh;
+}
+
+/* NAVBAR */
 .navbar {
   width: 250px;
   background: #191919;
@@ -227,23 +234,59 @@ body {
   height: 100%;
 }
 
+.nav-manager {
+  font-family: "Roboto Condensed", sans-serif;
+  color: #605f5f;
+  text-align: left;
+  margin: 15px 0 0 15px;
+}
+
+.nav-chat {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.chat-avatar {
+  background-image: url("/images/90.jpg");
+  height: 45px;
+  width: 45px;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+}
+
+.avatar-dot {
+  background: green;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin-left: 34px;
+}
+
+.chat-nick {
+  font-family: "Roboto Condensed", sans-serif;
+  color: #56819f;
+  margin-right: 30px;
+}
+
+/* TOPBAR */
 .topbar {
   background: white;
-  height: 60px;
+  height: 50px;
   display: flex;
   justify-content: flex-end;
 }
 
-.container {
-  max-width: 1200px;
-  width: 100%;
-  height: 100vh;
-}
-
 .topbar-element {
-  border: 3px solid red;
   display: flex;
   align-items: center;
+}
+
+.topbar__icon {
+  color: #ADADAD;
+  margin: 5px;
 }
 
 .general {
@@ -280,43 +323,6 @@ body {
 .date-button {
   display: flex;
   align-items: center;
-}
-
-.nav-manager {
-  font-family: "Roboto Condensed", sans-serif;
-  color: #605f5f;
-  text-align: left;
-  margin: 15px 0 0 15px;
-}
-
-.nav-chat {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 15px;
-}
-
-.chat-avatar {
-  background-image: url("/images/90.jpg");
-  height: 45px;
-  width: 45px;
-  background-position: center;
-  background-size: cover;
-  border-radius: 50%;
-}
-
-.avatar-dot {
-  background: green;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  margin-left: 34px;
-}
-
-.chat-nick {
-  font-family: "Roboto Condensed", sans-serif;
-  color: #56819f;
-  margin-right: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
