--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,10 @@
 $paragraph-color: #605f5f;
 $brand-main-color: red;
 $secondary-color: #ADADAD;
-
+$page-shadow: #E3E3E3;
+$detali-color: #F58220;
+$user-color:  #56819f;
+$primary-icon-hover: #f5f5f2;
 /* Font sizes */
 $paragraph-font-size: 16px;
 
