--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,9 +3,11 @@ $paragraph-color: #605f5f;
 $brand-main-color: red;
 $secondary-color: #ADADAD;
 $page-shadow: #E3E3E3;
-$detali-color: #F58220;
+$detali-color: #f58220;
+$detali-color-hover: #FFa200;
 $user-color:  #56819f;
 $primary-icon-hover: #f5f5f2;
+$dark-paragraph: #696969;
 /* Font sizes */
 $paragraph-font-size: 16px;
 
