updated general along with nav bars position

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,7 @@ $detali-color-hover: #FFa200;
 $user-color:  #56819f;
 $primary-icon-hover: #f5f5f2;
 $dark-paragraph: #696969;
+$active-green: green;
 /* Font sizes */
 $paragraph-font-size: 16px;
 
