--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,9 @@
 body {
   background: #F5F5F2;
   display: flex;
+  padding-top: 50px;
+  width: 100%;
+  padding-left: 250px;
 }
 
 * {
@@ -145,15 +148,17 @@ body {
 }
 
 .container {
-  max-width: 1200px;
   width: 100%;
-  height: 100vh;
 }
 
 /* NAVBAR */
 .navbar {
   width: 250px;
   background: #191919;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
 }
 
 .logo-box {
@@ -279,6 +284,10 @@ body {
   justify-content: flex-end;
   box-shadow: 1px 1px #E3E3E3;
   margin-right: 8px;
+  position: fixed;
+  top: 0;
+  left: 250px;
+  width: calc(100% - 250px);
 }
 
 .topbar-element {
@@ -300,11 +309,11 @@ body {
 }
 
 .border--left {
-  border-left: 1px solid #E3E3E3;
+  border-left: 2px solid #E3E3E3;
 }
 
 .border--right {
-  border-right: 1px solid #E3E3E3;
+  border-right: 2px solid #E3E3E3;
 }
 
 .icon-notification {
@@ -354,14 +363,16 @@ body {
   color: #ADADAD;
   font-weight: 600;
   padding: 15px;
-  border-bottom: 1px solid #E3E3E3;
+  border-bottom: 2px solid #E3E3E3;
 }
 
+/* GENERAL--DATE */
 .general__date {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 111px;
+  border-bottom: 2px solid #E3E3E3;
 }
 
 .date__box {
@@ -373,6 +384,12 @@ body {
 
 .date__box span {
   padding: 10px 10px;
+}
+
+.date__box:hover {
+  border: 2px solid gray;
+  transition: .4s;
+  cursor: pointer;
 }
 
 .split__line {
@@ -388,8 +405,8 @@ body {
 }
 
 .icon-calendar:hover {
-  background: #f5f5f2;
-  transition: .5s;
+  color: gray;
+  transition: .4s;
 }
 
 .icon-refresh {
@@ -405,6 +422,111 @@ body {
   background: #FFa200;
   color: #fff;
   transition: .3s;
+}
+
+/* GENERAL--STATS */
+.general__stats {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 50px;
+}
+
+.stats--wrapper {
+  border-bottom: 2px solid #E3E3E3;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 250px;
+}
+
+.stats--wrapper:hover {
+  border-bottom: 2px solid #ADADAD;
+  transition: .3s;
+}
+
+.stats__info {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 600;
+  color: #ADADAD;
+}
+
+.stats__value {
+  margin-left: 30px;
+  color: #696969;
+  font-weight: 600;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+/* GENERAL--CHART */
+.general__chart h3 {
+  color: #ADADAD;
+  font-family: "Roboto Condensed", sans-serif;
+  margin: 0 0 30px 65px;
+}
+
+.chart__box {
+  display: flex;
+  justify-content: center;
+}
+
+.chart {
+  background: #F3F3F1;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  align-items: center;
+  margin: 0 20px 30px;
+}
+
+.chart:hover {
+  background: #E3E3E3;
+  transition: .4s;
+}
+
+.chart h3 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+.chart__earned {
+  background: none;
+}
+
+.chart__earned h3 {
+  color: #56819f;
+}
+
+.dot {
+  background: #80BFCA;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.orange--dot {
+  background: #f58220;
+}
+
+.green--dot {
+  background: green;
+}
+
+/* GENERAL--DIAGRAM */
+.general__diagram {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.diagram__img {
+  width: 800px;
+  height: 400px;
 }
 
 /*# sourceMappingURL=style.css.map */
