--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,9 +5,13 @@
 @import "Glyphter";
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Roboto+Condensed&display=swap');
 
+
 body {
   background: #F5F5F2;
   display: flex;
+  padding-top: 50px;
+  width: 100%;
+  padding-left: 250px;
 }
 
 * {
@@ -17,9 +21,7 @@ body {
 }
 
 .container {
-  max-width: 1200px;
   width: 100%;
-  height: 100vh;
 }
 
 /* NAVBAR */
@@ -27,6 +29,10 @@ body {
 .navbar {
   width: 250px;
   background: #191919;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
 }
 
 .logo-box {
@@ -126,7 +132,7 @@ body {
 }
 
 .avatar-dot {
-  background: green;
+  background: $active-green;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -148,6 +154,10 @@ body {
   justify-content: flex-end;
   box-shadow: 1px 1px $page-shadow;
   margin-right: 8px;
+  position: fixed;
+  top: 0;
+  left: 250px;
+  width: calc(100% - 250px);
 }
 
 .topbar-element {
@@ -168,11 +178,11 @@ body {
 }
 
 .border--left {
-  border-left: 1px solid $page-shadow;
+  border-left: 2px solid $page-shadow;
 }
 
 .border--right {
-  border-right: 1px solid $page-shadow;
+  border-right: 2px solid $page-shadow;
 }
 
 .icon-notification {
@@ -223,14 +233,17 @@ body {
   color: $secondary-color;
   font-weight: 600;
   padding: 15px;
-  border-bottom: 1px solid $page-shadow;
+  border-bottom: 2px solid $page-shadow;
 }
+
+/* GENERAL--DATE */
 
 .general__date {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 111px;
+  border-bottom: 2px solid $page-shadow;
 }
 
 .date__box {
@@ -240,6 +253,11 @@ body {
   color: $secondary-color;
   span {
     padding: 10px 10px;
+  }
+  &:hover {
+    border: 2px solid gray;
+    transition: .4s;
+    cursor: pointer;
   }
 }
 
@@ -256,8 +274,8 @@ body {
 }
 
 .icon-calendar:hover {
-  background: $primary-icon-hover;
-  transition: .5s;
+  color: gray;
+  transition: .4s;
 }
 
 
@@ -275,4 +293,114 @@ body {
   }
 }
 
+/* GENERAL--STATS */
+
+.general__stats {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 50px;
+}
+
+.stats--wrapper {
+  border-bottom: 2px solid $page-shadow;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 250px;
+  &:hover {
+    border-bottom: 2px solid $secondary-color;
+    transition: .3s;
+  }
+}
+
+.stats__info {
+  font-family: $paragraph-font;
+  font-weight: 600;
+  color: $secondary-color;
+}
+
+.stats__value {
+  margin-left: 30px;
+  color: $dark-paragraph;
+  font-weight: 600;
+  font-family: $paragraph-font;
+}
+
+/* GENERAL--CHART */
+
+.general__chart {
+  h3 {
+    color: $secondary-color;
+    font-family: $paragraph-font;
+    margin: 0 0 30px 65px;
+  }
+}
+
+.chart__box {
+  display: flex;
+  justify-content: center;
+
+}
+
+.chart {
+  background: #F3F3F1;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  align-items: center;
+  margin: 0 20px 30px;
+  &:hover{
+    background: $page-shadow;
+    transition: .4s;
+  }
+  h3 {
+    font-family: $paragraph-font;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.chart__earned {
+  background: none;
+  h3 {
+    color: $user-color;
+  }
+}
+
+.dot {
+  background: #80BFCA;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.orange--dot {
+  background: $detali-color;
+}
+
+.green--dot {
+  background: $active-green;
+}
+
+/* GENERAL--DIAGRAM */
+
+.general__diagram {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.diagram__img {
+  width: 800px;
+  height: 400px;
+}
+
+ //[class*="stats"] {
+  // border: 2px solid red;
+ //}
 
