--- a/sass/style.scss
+++ b/sass/style.scss
@@ -413,6 +413,9 @@ body {
 /* MOBILES */
 
 @media (max-width: 767px) {
+
+  /* NAV BAR */
+
   .topbar {
     display: none;
   }
@@ -420,6 +423,7 @@ body {
   .navbar {
     height: auto;
     width: 100%;
+    position: fixed;
   }
 
   .logo-box {
@@ -452,5 +456,12 @@ body {
 
   .visible {
     display: none;
+  }
+
+  /* BODY */
+
+  body {
+    padding: 10px;
+    padding-top: 50px;
   }
 }
