--- a/css/style.css
+++ b/css/style.css
@@ -547,7 +547,7 @@ body {
 }
 
 /* MOBILES */
-@media (max-width: 687px) {
+@media (max-width: 767px) {
   /* NAV BAR */
   .topbar {
     display: none;
@@ -657,49 +657,13 @@ body {
 }
 
 /* SMALL DEVICES */
-@media (min-width: 688px) and (max-width: 767px) {
-  /* NAV BAR */
-  .topbar {
-    display: none;
+@media (min-width: 768px) and (max-width: 950px) {
+  .general__stats {
+    padding: 50px 10px;
+    flex-direction: column;
   }
-  .navbar {
-    height: auto;
-    width: 100%;
-    position: fixed;
-  }
-  .logo-box {
-    justify-content: space-between;
-  }
-  .logo-box a {
-    margin-left: 20px;
-  }
-  .logo-box span {
-    margin-right: 20px;
-  }
-  .mySidebar {
-    display: flex;
-    justify-content: center;
-  }
-  .mySidebar ul {
-    width: 100%;
-  }
-  .mySidebar ul li {
-    width: 100%;
-  }
-  .mySidebar ul li a {
-    display: flex;
-    justify-content: center;
-  }
-  .mobile-only {
-    display: none;
-  }
-  .visible {
-    display: none;
-  }
-  /* BODY */
-  body {
-    padding: 10px;
-    padding-top: 50px;
+  .stats--wrapper {
+    margin: 20px 0;
   }
 }
 
