--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
   height: 100%;
 }
 
-.logo-box {
+.navbar__box {
   display: flex;
   width: 100%;
   justify-content: space-around;
@@ -169,15 +169,15 @@ body {
   padding: 10px 0;
 }
 
-.logo-box a {
+.navbar__box a {
   color: #696969;
 }
 
-.logo-box a:hover {
+.navbar__box a:hover {
   color: #f5f5f2;
 }
 
-.logo-box span i:hover {
+.navbar__box span i:hover {
   color: #f5f5f2;
 }
 
@@ -186,7 +186,7 @@ body {
   font-size: 20px;
 }
 
-.logo {
+.box__logo {
   font-size: 26px;
   text-decoration: none;
   color: #dbd9d9;
@@ -194,7 +194,7 @@ body {
   font-weight: 800;
 }
 
-.main-nav {
+.mySidebar__list {
   list-style-type: none;
   text-decoration: none;
   display: flex;
@@ -202,14 +202,14 @@ body {
   justify-content: flex-start;
 }
 
-.nav-links {
+.list__item {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.nav-links a {
+.list__item a {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -220,24 +220,24 @@ body {
   color: #605f5f;
 }
 
-.nav-links a:hover {
+.list__item a:hover {
   background: linear-gradient(90deg, orange, orange 2%, #282828 2.1%, #282828 100%);
   color: #cecece;
 }
 
-.nav-links a span {
+.list__item a span {
   margin: 3px 15px 0 5px;
 }
 
-.nav-links:hover span {
+.list__item:hover span {
   color: #cecece;
 }
 
-.icon {
+.item__icon {
   color: #605f5f;
 }
 
-.nav-underLine {
+.mobile__underLine {
   margin-top: 40px;
   border-bottom: 1px solid #605f5f;
 }
@@ -251,21 +251,21 @@ body {
   height: 100%;
 }
 
-.nav-manager {
+.mobile__manager {
   font-family: "Roboto Condensed", sans-serif;
   color: #605f5f;
   text-align: left;
   margin: 15px 0 0 15px;
 }
 
-.nav-chat {
+.mobile__chat {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 15px;
 }
 
-.chat-avatar {
+.chat__avatar {
   background-image: url("/images/90.jpg");
   height: 45px;
   width: 45px;
@@ -274,7 +274,7 @@ body {
   border-radius: 50%;
 }
 
-.avatar-dot {
+.avatar__dot {
   background: green;
   height: 15px;
   width: 15px;
@@ -282,7 +282,7 @@ body {
   margin-left: 34px;
 }
 
-.chat-nick {
+.chat__nick {
   font-family: "Roboto Condensed", sans-serif;
   color: #56819f;
   margin-right: 30px;
@@ -302,22 +302,30 @@ body {
   width: calc(100% - 250px);
 }
 
-.topbar-element {
+.topbar__element {
   display: flex;
   align-items: center;
   color: #ADADAD;
   font-size: 20px;
 }
 
-.topbar__icon {
+.element__icon {
   color: #ADADAD;
   height: 100%;
   padding: 15px 15px;
 }
 
-.topbar__icon:hover {
+.element__icon:hover {
   background: #f5f5f2;
   transition: 0.5s;
+}
+
+.element__icon--borderLeft {
+  border-left: 2px solid #E3E3E3;
+}
+
+.element__icon--borderRight {
+  border-right: 2px solid #E3E3E3;
 }
 
 .border--left {
@@ -344,7 +352,7 @@ body {
   right: 15px;
 }
 
-.cash {
+.element__cash {
   font-weight: 600;
   font-family: "Roboto Condensed", sans-serif;
 }
@@ -354,7 +362,7 @@ body {
   padding-top: 20px;
 }
 
-.profile__username {
+.element__username {
   font-size: 16px;
   color: #56819f;
   padding-right: 10px;
@@ -387,30 +395,30 @@ body {
   border-bottom: 2px solid #E3E3E3;
 }
 
-.date__box {
+.date__boxDate {
   display: flex;
   border: 2px solid #E3E3E3;
   border-radius: 3px;
   color: #ADADAD;
 }
 
-.date__box span {
+.date__boxDate span {
   padding: 10px 10px;
 }
 
-.date__box:hover {
+.date__boxDate:hover {
   border: 2px solid gray;
   transition: 0.4s;
   cursor: pointer;
 }
 
-.split__line {
+.boxDate__split {
   border: 1px solid #E3E3E3;
   margin: 5px 0;
 }
 
-.start__date,
-.finish__date {
+.boxDate__start,
+.boxDate__finish {
   padding: 10px 70px 10px 15px;
   text-align: left;
   color: #696969;
@@ -445,7 +453,7 @@ body {
   padding: 50px;
 }
 
-.stats--wrapper {
+.rowStats__statsBox--wrapper {
   border-bottom: 2px solid #E3E3E3;
   padding: 10px 0;
   display: flex;
@@ -453,18 +461,18 @@ body {
   width: 250px;
 }
 
-.stats--wrapper:hover {
+.rowStats__statsBox--wrapper:hover {
   border-bottom: 2px solid #ADADAD;
   transition: 0.3s;
 }
 
-.stats__info {
+.statsBox__info {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 600;
   color: #ADADAD;
 }
 
-.stats__value {
+.statsBox__value {
   margin-left: 30px;
   color: #696969;
   font-weight: 600;
@@ -478,12 +486,12 @@ body {
   margin: 0 0 30px 65px;
 }
 
-.chart__box {
+.chart__boxChart {
   display: flex;
   justify-content: center;
 }
 
-.chart {
+.boxChart__btn {
   background: #f3f3f1;
   border-radius: 4px;
   display: flex;
@@ -493,27 +501,27 @@ body {
   margin: 0 20px 30px;
 }
 
-.chart:hover {
+.boxChart__btn:hover {
   background: #E3E3E3;
   transition: 0.4s;
 }
 
-.chart h3 {
+.boxChart__btn h3 {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   margin: 0;
   padding: 0;
 }
 
-.chart__earned {
+.boxChart__btn--earned {
   background: none;
 }
 
-.chart__earned h3 {
+.boxChart__btn--earned h3 {
   color: #56819f;
 }
 
-.dot {
+.boxChart__dot {
   background: #80bfca;
   height: 15px;
   width: 15px;
@@ -521,11 +529,11 @@ body {
   margin-right: 15px;
 }
 
-.orange--dot {
+.boxChart__dot--orange {
   background: #f58220;
 }
 
-.green--dot {
+.boxChart__dot--green {
   background: green;
 }
 
@@ -542,7 +550,7 @@ body {
   height: 400px;
 }
 
-.topbar-mobile {
+.topbarMobile {
   display: none;
 }
 
@@ -557,30 +565,30 @@ body {
     width: 100%;
     position: fixed;
   }
-  .logo-box {
+  .navbar__box {
     justify-content: space-between;
   }
-  .logo-box a {
+  .navbar__box a {
     margin-left: 40px;
   }
-  .logo-box span {
+  .navbar__box span {
     margin-right: 20px;
   }
-  .mySidebar {
+  .navbar__mySidebar {
     display: flex;
     justify-content: center;
   }
-  .mySidebar ul {
+  .navbar__mySidebar ul {
     width: 100%;
   }
-  .mySidebar ul li {
+  .navbar__mySidebar ul li {
     width: 100%;
   }
-  .mySidebar ul li a {
+  .navbar__mySidebar ul li a {
     display: flex;
     justify-content: center;
   }
-  .mobile-only {
+  .mySidebar__mobile {
     display: none;
   }
   .visible {
@@ -606,49 +614,48 @@ body {
     flex-direction: column;
     padding: 50px 10px;
   }
-  .stats--wrapper {
+  .rowStats__statsBox--wrapper {
     padding: 20px 0;
   }
   .general__chart h3 {
     text-align: center;
     margin: 20px 5px;
   }
-  .chart__box {
+  .chart__boxChart {
     flex-wrap: wrap;
   }
-  .chart h3 {
+  .boxChart__btn h3 {
     margin: 5px 5px;
   }
   .general__diagram {
     padding: 10px 5px;
   }
-  .topbar-mobile {
+  .topbarMobile {
     display: flex;
     width: 100%;
   }
-  .bottom-bar {
+  .topbarMobile__bottomBar {
     width: 100%;
   }
-  .topbar-element {
+  .bottomBar__caddy {
     justify-content: center;
     flex-direction: column;
-    width: 100%;
   }
-  .topbar__mobileWrapper {
-    margin: 0 5px;
+  .caddy__element {
+    margin: 0 0;
     display: flex;
     justify-content: space-between;
     align-items: cneter;
     width: 100%;
     border: 2px solid #cecece;
   }
-  .mobileWrapper--border {
+  .caddy__element--borderBottom {
     border-bottom: none;
   }
-  .cash {
+  .element__cash {
     align-self: center;
   }
-  .profile__username {
+  .element__username {
     align-self: center;
   }
   .icon-arrow-down-small {
@@ -662,7 +669,7 @@ body {
     padding: 50px 10px;
     flex-direction: column;
   }
-  .stats--wrapper {
+  .rowStats__statsBox--wrapper {
     margin: 20px 0;
   }
 }
