--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
   height: 100%;
 }
 
-.navbar__box {
+.box {
   display: flex;
   width: 100%;
   justify-content: space-around;
@@ -169,15 +169,15 @@ body {
   padding: 10px 0;
 }
 
-.navbar__box a {
+.box a {
   color: #696969;
 }
 
-.navbar__box a:hover {
+.box a:hover {
   color: #f5f5f2;
 }
 
-.navbar__box span i:hover {
+.box span i:hover {
   color: #f5f5f2;
 }
 
@@ -194,7 +194,7 @@ body {
   font-weight: 800;
 }
 
-.mySidebar__list {
+.list {
   list-style-type: none;
   text-decoration: none;
   display: flex;
@@ -202,14 +202,14 @@ body {
   justify-content: flex-start;
 }
 
-.list__item {
+.item {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.list__item a {
+.item a {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -220,16 +220,16 @@ body {
   color: #605f5f;
 }
 
-.list__item a:hover {
+.item a:hover {
   background: linear-gradient(90deg, orange, orange 2%, #282828 2.1%, #282828 100%);
   color: #cecece;
 }
 
-.list__item a span {
+.item a span {
   margin: 3px 15px 0 5px;
 }
 
-.list__item:hover span {
+.item:hover span {
   color: #cecece;
 }
 
@@ -258,14 +258,14 @@ body {
   margin: 15px 0 0 15px;
 }
 
-.mobile__chat {
+.chat {
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-top: 15px;
 }
 
-.chat__avatar {
+.avatar {
   background-image: url("/images/90.jpg");
   height: 45px;
   width: 45px;
@@ -302,7 +302,7 @@ body {
   width: calc(100% - 250px);
 }
 
-.topbar__element {
+.element {
   display: flex;
   align-items: center;
   color: #ADADAD;
@@ -320,11 +320,11 @@ body {
   transition: 0.5s;
 }
 
-.element__icon--borderLeft {
+.icon--borderLeft {
   border-left: 2px solid #E3E3E3;
 }
 
-.element__icon--borderRight {
+.icon--borderRight {
   border-right: 2px solid #E3E3E3;
 }
 
@@ -379,7 +379,7 @@ body {
   font-family: "Roboto Condensed", sans-serif;
 }
 
-.general__text {
+.text {
   color: #ADADAD;
   font-weight: 600;
   padding: 15px;
@@ -387,7 +387,7 @@ body {
 }
 
 /* GENERAL--DATE */
-.general__date {
+.date {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -395,18 +395,18 @@ body {
   border-bottom: 2px solid #E3E3E3;
 }
 
-.date__boxDate {
+.boxDate {
   display: flex;
   border: 2px solid #E3E3E3;
   border-radius: 3px;
   color: #ADADAD;
 }
 
-.date__boxDate span {
+.boxDate span {
   padding: 10px 10px;
 }
 
-.date__boxDate:hover {
+.boxDate:hover {
   border: 2px solid gray;
   transition: 0.4s;
   cursor: pointer;
@@ -446,14 +446,14 @@ body {
 }
 
 /* GENERAL--STATS */
-.general__stats {
+.stats {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 50px;
 }
 
-.rowStats__statsBox--wrapper {
+.statsBox--wrapper {
   border-bottom: 2px solid #E3E3E3;
   padding: 10px 0;
   display: flex;
@@ -461,7 +461,7 @@ body {
   width: 250px;
 }
 
-.rowStats__statsBox--wrapper:hover {
+.statsBox--wrapper:hover {
   border-bottom: 2px solid #ADADAD;
   transition: 0.3s;
 }
@@ -480,18 +480,18 @@ body {
 }
 
 /* GENERAL--CHART */
-.general__chart h3 {
+.chart h3 {
   color: #ADADAD;
   font-family: "Roboto Condensed", sans-serif;
   margin: 0 0 30px 65px;
 }
 
-.chart__boxChart {
+.boxChart {
   display: flex;
   justify-content: center;
 }
 
-.boxChart__btn {
+.btn {
   background: #f3f3f1;
   border-radius: 4px;
   display: flex;
@@ -501,27 +501,27 @@ body {
   margin: 0 20px 30px;
 }
 
-.boxChart__btn:hover {
+.btn:hover {
   background: #E3E3E3;
   transition: 0.4s;
 }
 
-.boxChart__btn h3 {
+.btn h3 {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   margin: 0;
   padding: 0;
 }
 
-.boxChart__btn--earned {
+.btn--earned {
   background: none;
 }
 
-.boxChart__btn--earned h3 {
+.btn--earned h3 {
   color: #56819f;
 }
 
-.boxChart__dot {
+.btn__dot {
   background: #80bfca;
   height: 15px;
   width: 15px;
@@ -529,16 +529,16 @@ body {
   margin-right: 15px;
 }
 
-.boxChart__dot--orange {
+.dot--orange {
   background: #f58220;
 }
 
-.boxChart__dot--green {
+.dot--green {
   background: green;
 }
 
 /* GENERAL--DIAGRAM */
-.general__diagram {
+.diagram {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -574,21 +574,21 @@ body {
   .navbar__box span {
     margin-right: 20px;
   }
-  .navbar__mySidebar {
+  .mySidebar {
     display: flex;
     justify-content: center;
   }
-  .navbar__mySidebar ul {
+  .mySidebar ul {
     width: 100%;
   }
-  .navbar__mySidebar ul li {
+  .mySidebar ul li {
     width: 100%;
   }
-  .navbar__mySidebar ul li a {
+  .mySidebar ul li a {
     display: flex;
     justify-content: center;
   }
-  .mySidebar__mobile {
+  .mobile {
     display: none;
   }
   .visible {
@@ -604,20 +604,20 @@ body {
   .general {
     margin: 2px;
   }
-  .general__text h3 {
+  .text h3 {
     text-align: center;
   }
-  .general__date {
+  .date {
     flex-wrap: wrap;
   }
-  .general__stats {
+  .stats {
     flex-direction: column;
     padding: 50px 10px;
   }
-  .rowStats__statsBox--wrapper {
+  .statsBox--wrapper {
     padding: 20px 0;
   }
-  .general__chart h3 {
+  .chart h3 {
     text-align: center;
     margin: 20px 5px;
   }
@@ -627,21 +627,21 @@ body {
   .boxChart__btn h3 {
     margin: 5px 5px;
   }
-  .general__diagram {
+  .diagram {
     padding: 10px 5px;
   }
   .topbarMobile {
     display: flex;
     width: 100%;
   }
-  .topbarMobile__bottomBar {
+  .bottomBar {
     width: 100%;
   }
-  .bottomBar__caddy {
+  .caddy {
     justify-content: center;
     flex-direction: column;
   }
-  .caddy__element {
+  .caddy-element {
     margin: 0 0;
     display: flex;
     justify-content: space-between;
@@ -649,11 +649,12 @@ body {
     width: 100%;
     border: 2px solid #cecece;
   }
-  .caddy__element--borderBottom {
+  .element--borderBottom {
     border-bottom: none;
   }
   .element__cash {
     align-self: center;
+    color: #605f5f;
   }
   .element__username {
     align-self: center;
@@ -665,11 +666,11 @@ body {
 
 /* SMALL DEVICES */
 @media (min-width: 768px) and (max-width: 950px) {
-  .general__stats {
+  .stats {
     padding: 50px 10px;
     flex-direction: column;
   }
-  .rowStats__statsBox--wrapper {
+  .statsBox--wrapper {
     margin: 20px 0;
   }
 }
