--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,11 +1,12 @@
 /* Colors */
 $paragraph-color: #605f5f;
-$brand-main-color: red;
+$danger: red;
 $secondary-color: #ADADAD;
 $page-shadow: #E3E3E3;
 $detali-color: #f58220;
 $detali-color-hover: #FFa200;
 $user-color:  #56819f;
+$user-color--hover:  #7ec9ff;
 $primary-icon-hover: #f5f5f2;
 $dark-paragraph: #696969;
 $active-green: green;
